build fix of dist.

--- a/server/soap_protocol/Makefile.in
+++ b/server/soap_protocol/Makefile.in
@@ -331,6 +331,7 @@ TESTLIBS = $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
 lib_LTLIBRARIES = libopcua_soap_server.la libopcua_soap_client.la
 libopcua_soap_server_la_SOURCES = \
   src/deserialize.cpp \
+  src/deserialize.h \
   src/discovery_service.cpp \
   src/discovery_service.h \
   src/endpoint_service.cpp \
@@ -339,6 +340,7 @@ libopcua_soap_server_la_SOURCES = \
   src/registration_service.cpp \
   src/registration_service.h \
   src/serialize.cpp \
+  src/serialize.h \
   src/soap_addon.cpp \
   src/soap_addon.h \
   src/soap_addon_factory.h \
