--- a/server/soap_protocol/Makefile.am
+++ b/server/soap_protocol/Makefile.am
@@ -11,7 +11,7 @@
 
 Bindings.h:
 	wsdl2h -g -p -z1 Bindings.wsdl -o Bindings.h || test true
-	soapcpp2 -L -i Bindings.h || test true
+	soapcpp2 -f50 -L -i Bindings.h || test true
 	
 #soapcpp2 -2 -j -w -x Bindings.h || test true
 
@@ -21,7 +21,7 @@ soapBasicHttpBinding_USCOREIRegistrationEndpointService.cpp,\
 soapBasicHttpBinding_USCOREIRegistrationEndpointProxy.cpp,\
 soapBasicHttpBinding_USCOREISessionEndpointService.cpp,\
 soapBasicHttpBinding_USCOREISessionEndpointProxy.cpp,\
-soapC.cpp,\
+soapC_*.cpp,\
 src/discovery_service.cpp\
 src/serialize.cpp\
 src/deserialize.cpp: Bindings.h
@@ -66,7 +66,41 @@ libopcua_soap_server_la_SOURCES = \
   soapBasicHttpBinding_USCOREIDiscoveryEndpointService.cpp \
   soapBasicHttpBinding_USCOREIRegistrationEndpointService.cpp \
   soapBasicHttpBinding_USCOREISessionEndpointService.cpp \
-  soapC.cpp
+  soapC_001.cpp \
+  soapC_002.cpp \
+  soapC_003.cpp \
+  soapC_004.cpp \
+  soapC_005.cpp \
+  soapC_006.cpp \
+  soapC_007.cpp \
+  soapC_008.cpp \
+  soapC_009.cpp \
+  soapC_010.cpp \
+  soapC_011.cpp \
+  soapC_012.cpp \
+  soapC_013.cpp \
+  soapC_014.cpp \
+  soapC_015.cpp \
+  soapC_016.cpp \
+  soapC_017.cpp \
+  soapC_018.cpp \
+  soapC_019.cpp \
+  soapC_020.cpp \
+  soapC_021.cpp \
+  soapC_022.cpp \
+  soapC_023.cpp \
+  soapC_024.cpp \
+  soapC_025.cpp \
+  soapC_026.cpp \
+  soapC_027.cpp \
+  soapC_028.cpp \
+  soapC_029.cpp \
+  soapC_030.cpp \
+  soapC_031.cpp \
+  soapC_032.cpp \
+  soapC_033.cpp \
+  soapC_034.cpp
+
 
 libopcua_soap_server_la_CPPFLAGS = $(INCLUDES) -DWITH_PURE_VIRTUAL -DLINUX $(GSOAP_CFLAGS)
 libopcua_soap_server_la_LDFLAGS = $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(GSOAP_LIBS) -ldl -lpthread  -Wl,--no-undefined
@@ -78,7 +112,42 @@ libopcua_soap_client_la_SOURCES = \
   src/namespaces.cpp \
   src/soap_client_addon.cpp \
   soapBasicHttpBinding_USCOREIDiscoveryEndpointProxy.cpp \
-  soapC.cpp
+  soapC_001.cpp \
+  soapC_002.cpp \
+  soapC_003.cpp \
+  soapC_004.cpp \
+  soapC_005.cpp \
+  soapC_006.cpp \
+  soapC_007.cpp \
+  soapC_008.cpp \
+  soapC_009.cpp \
+  soapC_010.cpp \
+  soapC_011.cpp \
+  soapC_012.cpp \
+  soapC_013.cpp \
+  soapC_014.cpp \
+  soapC_015.cpp \
+  soapC_016.cpp \
+  soapC_017.cpp \
+  soapC_018.cpp \
+  soapC_019.cpp \
+  soapC_020.cpp \
+  soapC_021.cpp \
+  soapC_022.cpp \
+  soapC_023.cpp \
+  soapC_024.cpp \
+  soapC_025.cpp \
+  soapC_026.cpp \
+  soapC_027.cpp \
+  soapC_028.cpp \
+  soapC_029.cpp \
+  soapC_030.cpp \
+  soapC_031.cpp \
+  soapC_032.cpp \
+  soapC_033.cpp \
+  soapC_034.cpp
+
+
 
 libopcua_soap_client_la_CPPFLAGS = $(GSOAP_CFLAGS) 
 libopcua_soap_client_la_LDFLAGS = $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(GSOAP_LIBS) -ldl -lpthread -Wl,--no-undefined
@@ -91,7 +160,42 @@ test_soap_SOURCES = \
   src/deserialize.cpp \
   src/namespaces.cpp \
   tests/get_endpoints.cpp \
-  soapC.cpp
+  soapC_001.cpp \
+  soapC_002.cpp \
+  soapC_003.cpp \
+  soapC_004.cpp \
+  soapC_005.cpp \
+  soapC_006.cpp \
+  soapC_007.cpp \
+  soapC_008.cpp \
+  soapC_009.cpp \
+  soapC_010.cpp \
+  soapC_011.cpp \
+  soapC_012.cpp \
+  soapC_013.cpp \
+  soapC_014.cpp \
+  soapC_015.cpp \
+  soapC_016.cpp \
+  soapC_017.cpp \
+  soapC_018.cpp \
+  soapC_019.cpp \
+  soapC_020.cpp \
+  soapC_021.cpp \
+  soapC_022.cpp \
+  soapC_023.cpp \
+  soapC_024.cpp \
+  soapC_025.cpp \
+  soapC_026.cpp \
+  soapC_027.cpp \
+  soapC_028.cpp \
+  soapC_029.cpp \
+  soapC_030.cpp \
+  soapC_031.cpp \
+  soapC_032.cpp \
+  soapC_033.cpp \
+  soapC_034.cpp
+
+
 
 test_soap_CPPFLAGS = $(TESTINCLUDES) $(GSOAP_CFLAGS)  
 test_soap_LDFLAGS = $(TESTLIBS) $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(GSOAP_LIBS) -ldl -lpthread -Wl,--no-undefined
@@ -124,7 +228,7 @@ CLEANFILES= \
   soapBasicHttpBinding_USCOREISessionEndpointService.h \
   soapBasicHttpBinding_USCOREISessionEndpointProxy.cpp \
   soapBasicHttpBinding_USCOREISessionEndpointProxy.h \
-  soapC.cpp \
+  soapC_*.cpp \
   soapH.h \
   soapStub.h \
   *.xml \
